# daily-challenge-rs

./: Cargo.toml  README.md
src/: bmi_calculator.rs  century.rs  day_43_boardgame_fight_resolver.rs  day_44_mexican_wave.rs  day_45_change_machine.rs  day_46_question_marks.rs  day_47_alphabet_position.rs  day_48_facebook_likes.rs  day_51_valid_curly_braces.rs  day_55_pile_of_cubes.rs  day_56_coffee_shop.rs  day_63_two_sum.rs  day_66_friend_list.rs  day_68_grade_book.rs  day_71_see_you_next_happy_year.rs  day_72_matrix_shift.rs  day_73_atm_heist.rs  dollars_and_cents.rs  faro_shuffle.rs  lib.rs  number_neighbor.rs  pyramid.rs
