[package]
name = "daily_challenge"
version = "0.1.0"
authors = ["Oleksii Filonenko <brightone@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.0"

[dev-dependencies]
maplit = "1.0.2"
